# Proyecto-Programaci-n-III-Plataforma-de-Streaming

./: CMakeLists.txt  README.md  Resultado.h  estrategias.cpp  estrategias.h  lista_ver_mas_tarde.cpp  lista_ver_mas_tarde.h  main.cpp  observer.cpp  observer.h  pelicula_builder.h  preprocesador.cpp  preprocesador.h  trie.cpp  trie.h
